--- a/Content/Our_Styling/Login_Register.css
+++ b/Content/Our_Styling/Login_Register.css
@@ -1,5 +1,7 @@
 ﻿body {
     background-color: black;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #form1 {
@@ -8,6 +10,16 @@
     margin-left: 45%;
     width: 20%;
     height: 50vh;
+    position: absolute;
+    border-radius: 5px
+}
+
+#Registrationform {
+    background-color: white;
+    margin-top: 8%;
+    margin-left: 26%;
+    width: 55%;
+    height: 63%;
     position: absolute;
     border-radius: 5px
 }
@@ -22,6 +34,16 @@
     margin-top: 16%;
 }
 
+.RegisterbackgroundDiv {
+    background-color: rgba(34,34,34, 0.45);
+    position: absolute;
+    width: 137%;
+    z-index: -1;
+    height: 47vh;
+    margin-left: -100vw;
+    margin-top: 18%;
+}
+
 .backgroundDiv_Animate {
     animation: 3s ease-in displayShadow;
     animation-fill-mode: forwards;
@@ -31,7 +53,6 @@
     box-shadow: 9px 8px orangered;
     margin-left: -21vw;
 }
-
 
 @keyframes displayShadow {
     65% {
@@ -45,6 +66,29 @@
     }
 }
 
+.RegisterbackgroundDiv_Animate {
+    animation: 3s ease-in displayShadow;
+    animation-fill-mode: forwards;
+}
+
+.RegisterbackgroundDiv_FailedLogin {
+    box-shadow: 9px 8px orangered;
+    margin-left: -17vw;
+}
+
+
+@keyframes displayShadowRegister {
+    65% {
+        margin-left: -17vw;
+        box-shadow: 0px 0px orangered;
+    }
+
+    100% {
+        box-shadow: 9px 8px orangered;
+        margin-left: -17vw;
+    }
+}
+
 .seperateInputs > input {
     outline: 0;
     border-width: 0 0 2px;
@@ -53,6 +97,17 @@
     width: 80%;
     font-size: 2.5vh;
     transition: border-width .2s ease-in-out;
+}
+
+.RegistrationInputs {
+    outline: 0;
+    border-width: 0 0 2px;
+    border-color: orangered;
+    margin-left: 5%;
+    width: 80%;
+    font-size: 2.5vh;
+    transition: border-width .2s ease-in-out;
+    margin-top: 5%;
 }
 
 .seperateInputs {
@@ -77,6 +132,22 @@
     bottom: 10%;
 }
 
+.RegisterSubmitButton {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 2vh;
+    padding: 1vh;
+    width: 6vw;
+    /* transition: all 0.5s; */
+    cursor: pointer;
+    float: right;
+    margin-right: 2vw;
+}
+
 .spaceOutButtons label {
     margin-right: 3vw; /* Or any other value */
 }
@@ -89,4 +160,159 @@
 #DropDownList1 {
     width: 80%;
     border-color: orangered;
+}
+
+.OccupationDropDown{
+    width:85%;
+}
+
+
+/*Toast Css*/
+.toast__container {
+    margin-top: 1%;
+    right: -20vw;
+}
+
+.moveToastOutOfTheWay {
+    right: -50vw;
+}
+
+.toastAppear {
+    animation: slide-left 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slide-left {
+    from {
+      right: -50vw;
+    }
+
+    to {
+        right: 6vw;
+    }
+}
+
+.toastDisappear {
+    animation: slide-right 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slide-right {
+    from{
+        right: 6vw;
+    }
+
+    to {
+        right: -50vw;
+    }
+}
+
+.ErrToastAppear {
+    animation: Errslide-left 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes Errslide-left {
+    from {
+        margin-right: -150%;
+    }
+
+    to {
+        margin-right: -50%;
+    }
+}
+
+.toast__cell {
+    display: inline-block;
+}
+
+.add-margin {
+    margin-top: 20px;
+}
+
+.toast__svg {
+    fill: #fff;
+}
+
+.toast {
+    z-index: 10001;
+    text-align: left;
+    padding: 21px 0;
+    background-color: #fff;
+    border-radius: 4px;
+    max-width: 500px;
+    top: 0px;
+    position: relative;
+    box-shadow: 1px 7px 14px -5px rgba(0,0,0,0.2);
+}
+
+
+    .toast:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 4px;
+        height: 100%;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
+
+.toast__icon {
+    position: absolute;
+    top: 50%;
+    left: 22px;
+    transform: translateY(-50%);
+    width: 14px;
+    height: 14px;
+    padding: 7px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.toast__type {
+    color: #3e3e3e;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.toast__message {
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #878787;
+}
+
+.toast__content {
+    padding-left: 70px;
+    padding-right: 60px;
+}
+
+.toast__close {
+    position: absolute;
+    right: 22px;
+    top: 50%;
+    width: 14px;
+    cursor: pointer;
+    height: 14px;
+    fill: #878787;
+    transform: translateY(-50%);
+}
+
+
+.toast--green .toast__icon {
+    background-color: #2BDE3F;
+}
+
+.toast--green:before {
+    background-color: #2BDE3F;
+}
+
+.toast--red .toast__icon {
+    background-color: red;
+}
+
+.toast--red:before {
+    background-color: red;
 }
