--- a/Content/Our_Styling/style.css
+++ b/Content/Our_Styling/style.css
@@ -22,22 +22,18 @@ body, html {
 }
 
 #WelcomeText {
-    width: 50%;
+    width: 85vh;
     height: auto;
     overflow: auto;
-    margin-top: 20%;
-    position: absolute;
     top: 0;
     bottom: 0;
     color: white;
-    width: 40%;
-    position: absolute;
-    font-size: 1.5em;
-    font-weight: 900;
+    font-size: 2vh;
+    text-align: justify;
 }
 
 #WelcomeDiv {
-    padding-left: 8vw;
+    padding-left: 5vw;
     animation-duration: 3s;
     animation-name: ComeIn;
 }
@@ -118,3 +114,64 @@ body, html {
 }
 
 
+/*Button CSS */
+
+
+#welcomeButton {
+    position: relative;
+    height: 5vh;
+    width: 10vw;
+    margin: 2% 0;
+    padding: 5px 5px;
+    font-weight: 700;
+    font-size: 1vw;
+    letter-spacing: 2px;
+    color: white;
+    border: 2px white solid;
+    border-radius: 4px;
+    text-transform: uppercase;
+    outline: 0;
+    overflow: hidden;
+    background: none;
+    z-index: 1;
+    cursor: pointer;
+    transition: 0.08s ease-in;
+    -o-transition: 0.08s ease-in;
+    -ms-transition: 0.08s ease-in;
+    -moz-transition: 0.08s ease-in;
+    -webkit-transition: 0.08s ease-in;
+}
+
+    #welcomeButton:hover {
+        color: black;
+    }
+
+.stacks img {
+    width: 5vw;
+    height: 5vw;
+}
+
+.stacks {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 5%;
+}
+
+
+.fill:before {
+    content: "";
+    position: absolute;
+    background: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 100%;
+    z-index: -1;
+    transition: bottom 0.09s ease-in;
+}
+
+.fill:hover:before {
+    bottom: 0;
+}
