--- a/Content/Our_Styling/Login_Register.css
+++ b/Content/Our_Styling/Login_Register.css
@@ -67,7 +67,7 @@
 }
 
 .RegisterbackgroundDiv_Animate {
-    animation: 3s ease-in displayShadow;
+    animation: 3s ease-in displayShadowRegister;
     animation-fill-mode: forwards;
 }
 
