--- a/Content/Our_Styling/style.css
+++ b/Content/Our_Styling/style.css
@@ -119,8 +119,8 @@ body, html {
 
 #welcomeButton {
     position: relative;
-    height: 5vh;
-    width: 10vw;
+    height: 31px;
+    width: 89px;
     margin: 2% 0;
     padding: 5px 5px;
     font-weight: 700;
@@ -140,6 +140,8 @@ body, html {
     -ms-transition: 0.08s ease-in;
     -moz-transition: 0.08s ease-in;
     -webkit-transition: 0.08s ease-in;
+    top: 0px;
+    left: 0px;
 }
 
     #welcomeButton:hover {
